fix: prevent overflow

--- a/apps/client/src/features/viewers/studio/StudioClock.scss
+++ b/apps/client/src/features/viewers/studio/StudioClock.scss
@@ -149,6 +149,7 @@ $orange-active: #f60;
     grid-area: schedule;
     font-family: monospace;
     margin-right: 2vw;
+    overflow: hidden;
   }
 
   .onAir {
